<resources>
    <string name="app_name">Calcula GPS</string>
    <string name="action_settings">Settings</string>
    <string name="allow_gps_permission">Grant gps permission</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="disable_gps">Disable GPS</string>
    <string name="start_route">Start Route</string>
    <string name="stop_route">Stop Route</string>
    <string name="travelled_distance">Travelled distance</string>
    <string name="past_time">Past time</string>
    <string name="question_search_place">What do you want to find?</string>
    <string name="no_gps_no_app">No GPS no APP</string>
</resources>
